syntax = "proto3";

package server;

option go_package = "iam/internal/rpc/protoc";


message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  string message = 1;
}




service User {
  rpc GetUserByID (GetUserRequest) returns (GetUserResponse) {}
}
